--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Install NPM dependencies
       run: npm install
     - name: Run unit tests
-      run: npm test:unit
+      run: npm run test:unit
