--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,3 +24,5 @@ jobs:
       run: npm install
     - name: Run unit tests
       run: npm run test:unit
+    - name: Display softuni username
+      run: echo "adelinaborisova1992"
